Make source blocks scroll

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     position: relative;
 }
 
+pre.src {
+    overflow: auto;
+}
+
 #table-of-contents {
     /*     text-align: right; */
     /* overflow: scroll; */
