--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ body {
     position: relative;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 pre.src {
     overflow: auto;
 }
